--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -1,12 +1,30 @@
 doctype html
 html
   head
-    meta(name='viewport',content='width=device-width,initial-sacale=1.0')
+    meta(name='viewport',content='width=device-width,initial-scale=1.0')
     title= title
     link(rel="stylesheet", href="/stylesheets/bootstrap.min.css")
+    link(rel="stylesheet", href="/stylesheets/font-awesome.min.css")
     link(rel='stylesheet', href='/stylesheets/style.css')
+  body
+    nav.navbar.fixed-top.navbar-expand-md
+        .container
+            a.navbar-brand(href='/') Loc8r
+            button.navbar-toggler.navbar-toggler-left(type='button', data-toggle='collapse', data-target='#navbarMain')
+                span.navbar-toggler-icon
+            #navbarMain.navbar-collapse.collapse
+                ul.navbar-nav.mr-auto
+                    li.nav-item
+                        a.nav-link(href='/about/') About
+
+    .container.content
+        block content
+
+        footer
+            .row
+                .col-12
+                    small &copy; Getting Mean - Simon Holmes/Clive Harber 2018
     script(src="/javascripts/jquery-3.5.1.min.js")
     script(src="/javascripts/popper.min.js",crossorigin='anonymous')
     script(src="/javascripts/bootstrap.min.js")
-  body
-    block content
+  
